# DearPyGui

./: .gitignore  test_pvista_async.py  test_pyvista.py
gui_app/: app.py  main.py  viewer_3d.py
gui_app/nodes/: base_node.py  import_geometry.py
nb_point_gen/: .clang-format
nb_point_gen/src_cpp/: CMakeLists.txt  PointGenerator.cpp  PointGenerator.hpp  nb_point_generator.cpp
nb_point_gen/src_py/: test_point_generator.py  test_pvista_async.py
pyo3_numpy_example/: Cargo.toml
pyo3_numpy_example/python_package/: main.py
pyo3_numpy_example/src/: lib.rs
pyo3_pyvista_example/: pyproject.toml
pyo3_pyvista_example/rust/: Cargo.toml
pyo3_pyvista_example/rust/src/: lib.rs
pyo3_pyvista_example/src/pyo3_pyvista_example/: __init__.py  test_rust_import.py
pyo3_pyvista_example/src/tests/: test_all.py
rust_fib_lib/: Cargo.toml
rust_fib_lib/src/: lib.rs
test_nanobind/c++_src/: CMakeLists.txt  nanobind_sig.cpp  test_fn.cpp  test_fn.hpp
test_nanobind/python_src/: test_cpp_fn.py
