[package]
name = "pyo3_pyvista_example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_pyvista_example"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5"
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24" 